Resolved search bar from collapsing

--- a/art_gallery/src/App.css
+++ b/art_gallery/src/App.css
@@ -8,7 +8,7 @@
   justify-content: left;
 }
 
-#search-bar{
+#searchBar{
   flex: 1;
 }
 
@@ -336,6 +336,7 @@ textarea{
 
 #mainSection{
   display:flex;
+  min-height: 100vh;
 }
 
 #filterSection{
